[tool.poetry]
name = "compmec-section"
version = "0.0.1"
description = "Analysis of beams cross-section using the boundary element method"
authors = ["Carlos Adir <carlos.adir.leite@gmail.com>"]
readme = "README.md"
packages = [{ include = "compmec/section", from = "src" }]

[tool.poetry.dependencies]
numpy = "^1.0.0"
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
scriv = {extras = ["toml"], version = "^1.3.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.scriv]
version = "literal: src/compmec/section/__init__.py: __version__"
